--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,13 @@ html {
   overscroll-behavior-y: none;
 }
 
+.frame {
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100vh;
+}
+
 * {
   overscroll-behavior-y: none;
 }
